Test with database

--- a/package.json
+++ b/package.json
@@ -6,6 +6,8 @@
     "debug": "^2.6.2",
     "express": "^4.15.2",
     "mv": "^2.1.1",
+    "nedb": "^1.8.0",
+    "node-slack": "^0.0.7",
     "request": "^2.75.0",
     "rimraf": "^2.6.1",
     "socket.io": "^1.7.3",
